%% Organization and access
erDiagram
  Organization {
    string id PK
  }
  Member {
    string id PK
  }
  Invitation {
    string id PK
  }
  User {
    string id PK
  }
  ExternalBulkApiSession {
    string id PK
  }
  BulkOperationAudit {
    string id PK
  }
  User ||--o{ Member : "relates to"
  User ||--o{ Invitation : "relates to"
  User ||--o{ ExternalBulkApiSession : "relates to"
  User ||--o{ BulkOperationAudit : "relates to"
  Organization ||--o{ Member : "relates to"
  Organization ||--o{ Invitation : "relates to"
  ExternalBulkApiSession ||--o{ BulkOperationAudit : "relates to"
